-Updated mob scroll to use Math.clamp in WaveFormScreen